@@ -1,3 +1,8 @@
+2006-06-20 Kalpit Desai <kvdesai@email.unc.edu>
+	* lt_analysis_gui.m:	
+	- Fixed a bug in plotting uneven-timestamps flag line.
+	- Fixed a bug while switching from drag box mode to draw new box mode.
+
 2006-06-16 Kalpit Desai <kvdesai@email.unc.edu>
 	* lt_analysis_gui.m:	Several bug fixes in the newly added features.
 
